try not to crash when calling glyphcache_wipe() on an uninitialized cache first step to fix PR 48492